出库画风完善

--- a/BR-MS/Export.html
+++ b/BR-MS/Export.html
@@ -5,11 +5,20 @@
     <title>出库登记</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
-        .el-form-item{
-            margin:0;
+        .el-form-item {
+            margin: 0;
         }
-        [v-cloak]{
+
+        [v-cloak] {
             display: none;
+        }
+
+        .el-card {
+            margin-bottom: 5px;
+        }
+
+        p.form-item {
+            margin: 2px 0 5px;
         }
     </style>
 </head>
