入库登记完成

--- a/BR-MS/resRegister.html
+++ b/BR-MS/resRegister.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>新物料入库</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
+    <link rel="stylesheet" href="res/print-form.css"><!--打印表样式-->
     <style>
 
         #box2 .el-collapse-item__header {
@@ -77,56 +78,6 @@
 
         [v-cloak] {
             display: none;
-        }
-
-        /*element自带表格对不齐,网上找的好看的表格样式*/
-
-        .grid {
-            font-family: verdana, arial, sans-serif;
-            font-size: 11px;
-            color: #333333;
-            border-width: 1px;
-            border-color: #666666;
-            border-collapse: collapse;
-        }
-
-        .grid th {
-            border-width: 1px;
-            padding: 8px;
-            border-style: solid;
-            border-color: #666666;
-            background-color: #ffffff;
-        }
-
-        .grid td {
-            border-width: 1px;
-            padding: 8px;
-            border-style: solid;
-            border-color: #666666;
-            background-color: #ffffff;
-        }
-
-        .grid, #form-top {
-            display: block;
-        }
-
-        #form-top {
-            font-size: 6px;
-        }
-
-        #form-top span {
-            display: inline-block;
-            margin: 0 1%;
-        }
-
-        .noprint{
-            text-align: left;
-        }
-
-        @media print{
-            .noprint{
-                display: none;
-            }
         }
     </style>
 </head>
