--- a/BR-MS/Import.html
+++ b/BR-MS/Import.html
@@ -154,7 +154,7 @@
                         <el-table-column type="index" width="50" label="序号"></el-table-column>
                         <el-table-column prop="localId" label="货品编号"></el-table-column>
                         <el-table-column prop="goodsName" label="货品名称"></el-table-column>
-                        <!--<el-table-column prop="registerTime" label="申请时间"></el-table-column>-->
+                        <el-table-column prop="applicationNum" label="申请单号"></el-table-column>
                         <el-table-column prop="supplier" label="供应商"></el-table-column>
                         <el-table-column label="详细信息" width="80">
                             <!--点击查看当前物资详细信息-->
