--- a/BR-MS/StorageLookup.html
+++ b/BR-MS/StorageLookup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>库存盘点</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
+    <link rel="stylesheet" href="res/print-form.css">
     <style>
         .demo-table-expand {
             font-size: 0;
@@ -23,110 +24,138 @@
 </head>
 <body>
 <div id="app">
-    <el-card>
-        <el-form :model="inSelection">
-            <el-form :inline="true">
-                <el-form-item label="入库类型：" size="mini">
-                    <el-select v-model="inSelection.inboundType">
-                        <el-option label="" value="">不限</el-option>
-                        <el-option label="正常入库" value="正常入库">正常入库</el-option>
-                    </el-select>
-                </el-form-item>
-            </el-form>
-            <el-form :inline="true">
-                <el-form-item label="货品编号：" size="mini"><el-input v-model="inSelection.goodsLocalId"></el-input></el-form-item>
-                <el-form-item label="责任人：" size="mini"><el-input v-model="inSelection.charity"></el-input></el-form-item>
-            </el-form>
-            <el-form :inline="true">
-                <el-form-item label="仓库：" size="mini"><span>{{currentWarehouse}}</span></el-form-item>
-                <el-form-item label="入库时间范围：" size="mini">
-                    <el-date-picker v-model="timeSelect" @change="transferDate(inSelection)" type="daterange" range-separator="至" start-placeholder="开始日期" end-placeholder="结束日期">{{timeSelect}}</el-date-picker>
-                </el-form-item>
-                <el-form-item size="mini">
-                    <el-button style="background-color: #ececec" @click="search">查询</el-button>
-                </el-form-item>
-            </el-form>
-        </el-form>
-    </el-card>
-    <el-table :data="queryResult" size="mini" max-height="250" :default-sort="{prop: 'rukushijian', order: 'descending'}">
-        <el-table-column type="expand"><!--折叠部分项-->
-            <template slot-scope="props">
-                <el-form label-position="right" class="demo-table-expand">
-                    <el-form :inline="true">
-                        <el-form-item label="货品名称：" size="mini">
-                            <span>{{ props.row.goods_name }}</span>
-                        </el-form-item>
-                        <el-form-item label="货品编号：" size="mini">
-                            <span>{{ props.row.local_id }}</span>
-                        </el-form-item>
-                    </el-form>
-                    <el-form :inline="true">
-                        <el-form-item label="单位：" size="mini">
-                            <span>{{ props.row.unit }}</span>
-                        </el-form-item>
-                        <el-form-item label="数量：" size="mini">
-                            <span>{{ props.row.amount }}</span>
-                        </el-form-item>
-                    </el-form>
-                    <el-form :inline="true">
-                        <el-form-item label="责任人：" size="mini">
-                            <span>{{ props.row.charity }}</span>
-                        </el-form-item>
-                        <el-form-item label="存放库位：" size="mini">
-                            <span>{{ props.row.warehouse_repository }}</span>
-                        </el-form-item>
-                    </el-form>
+    <div v-show="state!==3">
+        <el-card>
+            <el-form :model="inSelection">
+                <el-form :inline="true">
+                    <el-form-item label="入库类型：" size="mini">
+                        <el-select v-model="inSelection.inboundType">
+                            <el-option label="正常入库" :value="undefined">正常入库</el-option>
+                        </el-select>
+                    </el-form-item>
                 </el-form>
-            </template>
-        </el-table-column>
-        <el-table-column type="index" width="50" label="序号"></el-table-column>
-        <el-table-column prop="goods_name" label="货品名称" width="100"></el-table-column>
-        <el-table-column prop="local_id" label="货品编号" width="100"></el-table-column>
-        <el-table-column label="货品信息" width="80">
-            <!--点击查看当前物资详细信息-->
-            <template slot-scope="scope">
-                <el-button size="mini" style="background-color: #ececec" @click="viewDetail(scope.row)">查看
-                </el-button>
-            </template>
-        </el-table-column>
-        <el-table-column prop="inboundTime" label="入库时间"width="100"></el-table-column>
-        <el-table-column prop="remark" label="备注"width="250"></el-table-column>
-    </el-table>
-    <el-dialog title="货品详细信息" :visible.sync="dialogVisible" width="95%" :before-close="handleClose">
-        <el-table :data="detailForm">
-            <el-table-column prop="key1">
+                <el-form :inline="true">
+                    <el-form-item label="货品编号：" size="mini"><el-input v-model="inSelection.goodsLocalId"></el-input></el-form-item>
+                    <el-form-item label="责任人：" size="mini"><el-input v-model="inSelection.charity"></el-input></el-form-item>
+                </el-form>
+                <el-form :inline="true">
+                    <el-form-item label="仓库：" size="mini"><span>{{currentWarehouse}}</span></el-form-item>
+                    <el-form-item label="入库时间范围：" size="mini">
+                        <el-date-picker v-model="timeSelect" @change="transferDate(inSelection)" type="daterange" range-separator="至" start-placeholder="开始日期" end-placeholder="结束日期">{{timeSelect}}</el-date-picker>
+                    </el-form-item>
+                    <el-form-item size="mini">
+                        <el-button style="background-color: #ececec" @click="search">查询</el-button>
+                        <el-button style="background-color: #ececec" @click="reset">返回</el-button>
+                    </el-form-item>
+                </el-form>
+            </el-form>
+        </el-card>
+        <el-table :data="queryResult" size="mini" max-height="250" :default-sort="{prop: 'rukushijian', order: 'descending'}">
+            <el-table-column type="expand"><!--折叠部分项-->
                 <template slot-scope="props">
-                    <b>{{translate[props.row.key1]}}</b>
+                    <el-form label-position="right" class="demo-table-expand">
+                        <el-form :inline="true">
+                            <el-form-item label="货品名称：" size="mini">
+                                <span>{{ props.row.goodName }}</span>
+                            </el-form-item>
+                            <el-form-item label="货品编号：" size="mini">
+                                <span>{{ props.row.goodLocalId }}</span>
+                            </el-form-item>
+                        </el-form>
+                        <el-form :inline="true">
+                            <el-form-item label="单位：" size="mini">
+                                <span>{{ props.row.unit }}</span>
+                            </el-form-item>
+                            <el-form-item label="数量：" size="mini">
+                                <span>{{ props.row.amount }}</span>
+                            </el-form-item>
+                        </el-form>
+                        <el-form :inline="true">
+                            <el-form-item label="责任人：" size="mini">
+                                <span>{{ props.row.charity }}</span>
+                            </el-form-item>
+                            <el-form-item label="存放库位：" size="mini">
+                                <span>{{ props.row.warehouseRepository }}</span>
+                            </el-form-item>
+                        </el-form>
+                    </el-form>
                 </template>
             </el-table-column>
-            <el-table-column prop="val1"></el-table-column>
-            <el-table-column prop="key2">
-                <template slot-scope="props">
-                    <b>{{translate[props.row.key2]}}</b>
+            <el-table-column type="index" width="50" label="序号"></el-table-column>
+            <el-table-column prop="goodName" label="货品名称" width="100"></el-table-column>
+            <el-table-column prop="goodLocalId" label="货品编号" width="100"></el-table-column>
+            <el-table-column label="货品信息" width="80">
+                <!--点击查看当前物资详细信息-->
+                <template slot-scope="scope">
+                    <el-button size="mini" style="background-color: #ececec" @click="viewDetail(scope.row)">查看
+                    </el-button>
                 </template>
             </el-table-column>
-            <el-table-column prop="val2"></el-table-column>
-            <el-table-column prop="key3">
-                <template slot-scope="props">
-                    <b>{{translate[props.row.key3]}}</b>
-                </template>
-            </el-table-column>
-            <el-table-column prop="val3"></el-table-column>
+            <el-table-column prop="inboundTime" label="入库时间"width="100"></el-table-column>
+            <el-table-column prop="remark" label="备注"width="250"></el-table-column>
         </el-table>
-        <span slot="footer" class="dialog-footer">
+        <el-dialog title="货品详细信息" :visible.sync="dialogVisible" width="95%" :before-close="handleClose">
+            <el-table :data="detailForm">
+                <el-table-column prop="key1">
+                    <template slot-scope="props">
+                        <b>{{translate[props.row.key1]}}</b>
+                    </template>
+                </el-table-column>
+                <el-table-column prop="val1"></el-table-column>
+                <el-table-column prop="key2">
+                    <template slot-scope="props">
+                        <b>{{translate[props.row.key2]}}</b>
+                    </template>
+                </el-table-column>
+                <el-table-column prop="val2"></el-table-column>
+                <el-table-column prop="key3">
+                    <template slot-scope="props">
+                        <b>{{translate[props.row.key3]}}</b>
+                    </template>
+                </el-table-column>
+                <el-table-column prop="val3"></el-table-column>
+            </el-table>
+            <span slot="footer" class="dialog-footer">
                         <el-button @click="dialogVisible = false" size="mini" style="background-color: #ececec">关闭</el-button>
                     </span>
-    </el-dialog>
-    <el-pagination @current-change="handleCurrentChange" :current-page="pageNum"
-                   :page-size="pageSize" layout="total,prev,pager,next,jumper"
-                   :total="total[0]">
+        </el-dialog>
+        <el-pagination @current-change="handleCurrentChange" :current-page="pageNum"
+                       :page-size="pageSize" layout="total,prev,pager,next,jumper"
+                       :total="total[0]">
 
-    </el-pagination>
-    <el-form>
-        <el-form-item size="mini">
-            <el-button style="background-color: #ececec">生成货品清单</el-button>
-        </el-form-item>
-    </el-form>
+        </el-pagination>
+        <el-form>
+            <el-form-item size="mini">
+                <el-button style="background-color: #ececec" @click="handlePrint">生成货品清单</el-button>
+            </el-form-item>
+        </el-form>
+    </div>
+    <div v-show="state===3" id="box3">
+        <!--startprint-->
+        <table class="grid">
+            <tr>
+                <th>序号</th>
+                <th>物资名称</th>
+                <th>身份识别码</th>
+                <th>入库时间</th>
+                <th>数量</th>
+                <th>单位</th>
+                <th>供应商</th>
+                <th>存放库位</th>
+                <th>负责人</th>
+                <th>联系电话</th>
+                <th>备注</th>
+            </tr>
+            <tr v-for="data in toPrint">
+                <td v-for="key in Object.keys(data)">{{data[key]}}</td>
+            </tr>
+        </table>
+        <!--endprint-->
+        <p class="noprint">
+            <el-button type="primary" @click="performPrint">打印</el-button>
+            <el-button @click="()=>{state=1;}">返回</el-button>
+        </p>
+    </div>
 </div>
 </body>
 <script src="lib/vue.js"></script>
@@ -153,7 +182,7 @@
             refresh: [app.queryResult,],
             pageNum: app.pageNum,
             pageSize:app.pageSize,
-            itemName: 'goods',
+            itemName: 'inbounds',
             total: (totalNum) => {
                 while (totalPages[0] !== undefined) {
                     totalPages.pop();
@@ -165,7 +194,7 @@
             for (var item of data) {
                 app.queryResult.push(item);
             }
-        });
+        },10);
     }
 
      var totalPages=[0,];
@@ -174,7 +203,9 @@
         el: '#app',
         data: function(){
             return{
+                state:0,
                 detailForm:[],
+                toPrint:[],
                 pageNum:1,
                 pageSize:6,
                 total:totalPages,
@@ -186,41 +217,22 @@
                 },
                 queryResult:[],
                 translate:{
-                    goods_name:'物资名称',
-                    local_id:'物资编号',
+                    goodName:'物资名称',
+                    goodLocalId:'物资编号',
+                    warehouseRepository:'存放库位',
+                    warehouseName:'仓库名称',
+                    inboundNum:'入库单号',
                     type:'物资类型',
-                    keywords:'关键字',
-                    norms:'规格',
-                    appearance:'外观',
-                    time_feature:'时间特征',
-                    safety_condition:'安全条件',
-                    carrier_size:'运载尺寸',
-                    temperature:'温度条件',
-                    humidity:'湿度条件',
-                    other_conditions:'其他条件',
-                    producer_name:'生产商',
-                    produce_time:'生产日期',
-                    produce_valid_time:'失效日期',
-                    warehouse_repository:'存放库位1',
-                    longitude:'经度',
-                    latitude:'纬度',
-                    altitude:'海拔',
-                    country_id:'国家',
-                    area:'战区',
-                    province_id:'省份',
-                    city_id:'城市',
-                    county_id:'区县',
-                    detail_location:'详细地址',
-                    department:'所属部门',
-                    allottedTime:'1',
+                    amount:'数量',
+                    founder:'建单人',
+                    operator:'操作员',
+                    createTime:'建单时间',
+                    supplier:'供应商',
+                    unit:'单位',
+                    amount:'数量',
+                    charity:'负责人',
                     phone:'联系电话',
-                    is_managed:'是否受监管',
-                    official:'负责人',
-                    register_time:'2',
-                    state_id:'状态',
-                    state_type:'状态类型',
-                    state_value:'状态值',
-                    quantity:'数量'
+                    remark:'备注'
                 }
             }
         },
@@ -233,6 +245,65 @@
             })
         },
         methods: {
+            handlePrint(){
+                app.state=3;
+                app.toPrint=[];
+                var indexNum=1;
+                for(let i=1;i<=app.total[0];i++){
+                    ((index)=>{
+                        catchData({
+                            url: '/depot/stocktaking/stocktaking',
+                            app: app,
+                            searchKey:(()=>{
+                                for(var key in app.inSelection){
+                                    if(!app.inSelection[key]){
+                                        delete app.inSelection[key];
+                                    }
+                                }
+                                return app.inSelection;
+                            })(),
+                            refresh: [],
+                            pageNum: index,
+                            pageSize:app.pageSize,
+                            itemName: 'inbounds',
+                            total: (totalNum) => {
+                                while (totalPages[0] !== undefined) {
+                                    totalPages.pop();
+                                }
+                                totalPages.push(totalNum);
+                            }
+                        }, (allPages, data) => {
+                            console.log(data);
+                            for (var item of data) {
+                                var obj={
+                                    index:"",
+                                    goodName:"",
+                                    goodLocalId:"",
+                                    inboundTime:"",
+                                    amount:"",
+                                    unit:"",
+                                    supplier:"",
+                                    warehouseRepository:"",
+                                    charity:"",
+                                    phone:"",
+                                    remark:""
+                                };
+                                obj['index']=indexNum++;
+                                for(let key in obj){
+                                    if(key!=='index'){
+                                        obj[key]=item[key];
+                                    }
+
+                                }
+                                app.toPrint.push(obj);
+                            }
+                        },10);
+                    })(i);
+                }
+            },
+            performPrint(){
+                window.print();
+            },
             viewDetail(row){
                 while(app.detailForm[0]!==undefined){
                     app.detailForm.pop();
@@ -243,7 +314,7 @@
                     var obj={};
                     obj['key']=key;
                     obj['val']=row[key];
-                    if(key!=='warehouse_id'&&key!=='goods_id'&&key!=='ip_address'&&key!=='allottedTime'&&row[key])
+                    if(key!=='inboundId'&&key!=='warehouseId'&&key!=='method'&&row[key])
                         tmp.push(obj);
                 }
                 for(let i=0;tmp[i]!==undefined;i+=3){
@@ -261,8 +332,9 @@
                     app.detailForm.push(obj);
                 }
             },
-            handleCurrentChange(){
-
+            handleCurrentChange(page){
+                app.pageNum=page;
+                getData(app);
             },
             handleClose(){
                 app.dialogVisible=false;
@@ -279,7 +351,16 @@
             },
             search(){
                 getData(app);
-            }
+            },
+            reset(){
+                app.pageNum=1;
+                app.inSelection.goodsLocalId="";
+                app.inSelection.charity="";
+                while(app.timeSelect[0]!==undefined){
+                    app.timeSelect.pop();
+                }
+                getData(app);
+            },
         },
     });
 </script>
